[POLY-396] Create about page
* also lifted hyperlink styles from Home page into global stylesheet for use on other pages

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* common style for hyperlinks on pages */
+.hyperlink {
+  @apply text-blueLink hover:underline hover:underline-offset-2;
+}
