[POLY-467] Create NewFlowModal
* includes FlowPropertiesSelector and removeGECourses toggle
* created Toggle component
* fixed issue with FlowPropertiesSelector redundantly dispatching updates to program IDs
* added both e2e tests (eg modal visibility) and component tests for modal
* wire modal into FlowInfoPanel as well

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -59,3 +59,8 @@ button.btn-accent:focus-visible {
   min-height: 2.5rem;
   font-size: 0.75rem;
 }
+
+/* remove modal backdrop */
+.modal {
+  background-color: transparent;
+}
