[POLY-472] Create FlowListItem component
* items in the FlowInfoPanel that will list the flowcharts
* includes a tooltip that appears when hovering/clicking the 'i' icon
* add relevant stores and other client machinery to create data that this component
  needs from the user flowchart list
* actual list creation will be in another task

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -33,7 +33,6 @@ button.btn-accent:focus-visible {
 .redButton {
   @apply bg-red-200 hover:bg-red-300 text-red-600 border-none btnOutline;
 }
-
 .greenButton {
   @apply bg-green-200 hover:bg-green-300 text-green-500 border-none btnOutline;
 }
@@ -63,4 +62,12 @@ button.btn-accent:focus-visible {
 /* remove modal backdrop */
 .modal {
   background-color: transparent;
+}
+
+/* have paragraphs in tooltip content respect newlines */
+.tippy-content p {
+  white-space: pre-wrap;
+}
+.tippy-content {
+  word-break: break-word;
 }
