--- a/src/app.postcss
+++ b/src/app.postcss
@@ -102,3 +102,24 @@ button.btn-accent:focus-visible {
   padding-right: 1rem; /* 16 px */
   user-select: none;
 }
+
+/* firefox scrollbar */
+.scrollbar-thin * {
+  scrollbar-width: thin;
+  scrollbar-color: #cdcdcd transparent;
+}
+
+/* blink and webkit scrollbar */
+.scrollbar-thin *::-webkit-scrollbar {
+  width: 8px; /* vertical scrollbar */
+  height: 8px; /* horizontal scrollbar */
+}
+.scrollbar-thin *::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scrollbar-thin *::-webkit-scrollbar-thumb {
+  background-color: #cdcdcd;
+}
+.scrollbar-thin *::-webkit-scrollbar-thumb:hover {
+  background-color: #a0a0a0;
+}
