move disabled properties to anchor child tag in list item
* also move li-disabled > a-disabled class to common class list
* also add aria-disabled properties on a tags for a11y

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -123,3 +123,9 @@ button.btn-accent:focus-visible {
 .scrollbar-thin *::-webkit-scrollbar-thumb:hover {
   background-color: #a0a0a0;
 }
+
+.a-disabled {
+  pointer-events: none;
+  user-select: none;
+  color: hsl(var(--bc) / 0.3);
+}
